Changelog
=========

2.0 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Removed support for Python 2.7, Django 1.8 and Django 1.10


1.13 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~

 * Front-end cache invalidator now supports purging URLs as a batch (Karl Hobley)
 * Custom document model is now documented (Emily Horsman)
 * Use minified versions of CSS in the admin by adding minification to the front-end tooling (Vincent Audebert, Thibaud Colas)
 * Wagtailforms serve view now passes `request.FILES`, for use in custom form handlers (LB (Ben Johnston))
 * Documents and images are now given new filenames on re-uploading, to avoid old versions being kept in cache (Bertrand Bordage)
 * Added custom 404 page for admin interface (Jack Paine)
 * Breadcrumb navigation now uses globe icon to indicate tree root, rather than home icon (Matt Westcott)
 * Updated React to 15.6.2 due to relicensing (Janneke Janssen)
 * User search in the Wagtail admin UI now works across multiple fields (Will Giddens)
 * `Page.last_published_at` is now a filterable field for search (Mikalai Radchuk)
 * Page search results and usage listings now include navigation links (Matt Westcott)
 * Fix: "Open Link in New Tab" on a right arrow in page explorer should open page list (Emily Horsman)
 * Fix: Using `order_by_relevance=False` when searching with PostgreSQL now works (Mitchel Cabuloy)
 * Fix: Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
 * Fix: `WAGTAILAPI_LIMIT_MAX` now accepts None to disable limiting (jcronyn)
 * Fix: In PostgreSQL, new default ordering when ranking of objects is the same (Bertrand Bordage)
 * Fix: Fixed overlapping header elements on form submissions view on mobile (Jack Paine)
 * Fix: Fixed avatar position in footer on mobile (Jack Paine)
 * Fix: Custom document models no longer require their own post-delete signal handler (Gordon Pendleton)